@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,10 +17,12 @@
 package org.springframework.boot.build.bom;
 
 import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
+import groovy.namespace.QName;
 import groovy.util.Node;
-import groovy.xml.QName;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
@@ -34,6 +36,7 @@ import org.gradle.api.publish.maven.MavenPublication;
 import org.springframework.boot.build.DeployedPlugin;
 import org.springframework.boot.build.MavenRepositoryPlugin;
 import org.springframework.boot.build.bom.Library.Group;
+import org.springframework.boot.build.bom.Library.Module;
 import org.springframework.boot.build.bom.bomr.UpgradeBom;
 
 /**
@@ -106,8 +109,10 @@ public class BomPlugin implements Plugin<Project> {
 				Node dependencyManagement = findChild(projectNode, "dependencyManagement");
 				if (dependencyManagement != null) {
 					addPropertiesBeforeDependencyManagement(projectNode, properties);
+					addClassifiedManagedDependencies(dependencyManagement);
 					replaceVersionsWithVersionPropertyReferences(dependencyManagement);
 					addExclusionsToManagedDependencies(dependencyManagement);
+					addTypesToManagedDependencies(dependencyManagement);
 				}
 				else {
 					projectNode.children().add(properties);
@@ -132,7 +137,9 @@ public class BomPlugin implements Plugin<Project> {
 				for (Node dependency : findChildren(dependencies, "dependency")) {
 					String groupId = findChild(dependency, "groupId").text();
 					String artifactId = findChild(dependency, "artifactId").text();
-					String versionProperty = this.bom.getArtifactVersionProperty(groupId, artifactId);
+					Node classifierNode = findChild(dependency, "classifier");
+					String classifier = (classifierNode != null) ? classifierNode.text() : "";
+					String versionProperty = this.bom.getArtifactVersionProperty(groupId, artifactId, classifier);
 					if (versionProperty != null) {
 						findChild(dependency, "version").setValue("${" + versionProperty + "}");
 					}
@@ -160,6 +167,63 @@ public class BomPlugin implements Plugin<Project> {
 			}
 		}
 
+		private void addTypesToManagedDependencies(Node dependencyManagement) {
+			Node dependencies = findChild(dependencyManagement, "dependencies");
+			if (dependencies != null) {
+				for (Node dependency : findChildren(dependencies, "dependency")) {
+					String groupId = findChild(dependency, "groupId").text();
+					String artifactId = findChild(dependency, "artifactId").text();
+					Set<String> types = this.bom.getLibraries().stream()
+							.flatMap((library) -> library.getGroups().stream())
+							.filter((group) -> group.getId().equals(groupId))
+							.flatMap((group) -> group.getModules().stream())
+							.filter((module) -> module.getName().equals(artifactId)).map(Module::getType)
+							.filter(Objects::nonNull).collect(Collectors.toSet());
+					if (types.size() > 1) {
+						throw new IllegalStateException(
+								"Multiple types for " + groupId + ":" + artifactId + ": " + types);
+					}
+					if (types.size() == 1) {
+						String type = types.iterator().next();
+						dependency.appendNode("type", type);
+					}
+				}
+			}
+		}
+
+		@SuppressWarnings("unchecked")
+		private void addClassifiedManagedDependencies(Node dependencyManagement) {
+			Node dependencies = findChild(dependencyManagement, "dependencies");
+			if (dependencies != null) {
+				for (Node dependency : findChildren(dependencies, "dependency")) {
+					String groupId = findChild(dependency, "groupId").text();
+					String artifactId = findChild(dependency, "artifactId").text();
+					String version = findChild(dependency, "version").text();
+					Set<String> classifiers = this.bom.getLibraries().stream()
+							.flatMap((library) -> library.getGroups().stream())
+							.filter((group) -> group.getId().equals(groupId))
+							.flatMap((group) -> group.getModules().stream())
+							.filter((module) -> module.getName().equals(artifactId)).map(Module::getClassifier)
+							.filter(Objects::nonNull).collect(Collectors.toSet());
+					Node target = dependency;
+					for (String classifier : classifiers) {
+						if (classifier.length() > 0) {
+							if (target == null) {
+								target = new Node(null, "dependency");
+								target.appendNode("groupId", groupId);
+								target.appendNode("artifactId", artifactId);
+								target.appendNode("version", version);
+								int index = dependency.parent().children().indexOf(dependency);
+								dependency.parent().children().add(index + 1, target);
+							}
+							target.appendNode("classifier", classifier);
+						}
+						target = null;
+					}
+				}
+			}
+		}
+
 		private void addPluginManagement(Node projectNode) {
 			for (Library library : this.bom.getLibraries()) {
 				for (Group group : library.getGroups()) {
@@ -170,7 +234,7 @@ public class BomPlugin implements Plugin<Project> {
 						plugin.appendNode("artifactId", pluginName);
 						String versionProperty = library.getVersionProperty();
 						String value = (versionProperty != null) ? "${" + versionProperty + "}"
-								: library.getVersion().toString();
+								: library.getVersion().getVersion().toString();
 						plugin.appendNode("version", value);
 					}
 				}
@@ -191,9 +255,8 @@ public class BomPlugin implements Plugin<Project> {
 
 		private Node findChild(Node parent, String name) {
 			for (Object child : parent.children()) {
-				if (child instanceof Node) {
-					Node node = (Node) child;
-					if ((node.name() instanceof QName) && name.equals(((QName) node.name()).getLocalPart())) {
+				if (child instanceof Node node) {
+					if ((node.name() instanceof QName qname) && name.equals(qname.getLocalPart())) {
 						return node;
 					}
 					if (name.equals(node.name())) {
@@ -206,15 +269,12 @@ public class BomPlugin implements Plugin<Project> {
 
 		@SuppressWarnings("unchecked")
 		private List<Node> findChildren(Node parent, String name) {
-			return (List<Node>) parent.children().stream().filter((child) -> isNodeWithName(child, name))
-					.collect(Collectors.toList());
-
+			return parent.children().stream().filter((child) -> isNodeWithName(child, name)).toList();
 		}
 
 		private boolean isNodeWithName(Object candidate, String name) {
-			if (candidate instanceof Node) {
-				Node node = (Node) candidate;
-				if ((node.name() instanceof QName) && name.equals(((QName) node.name()).getLocalPart())) {
+			if (candidate instanceof Node node) {
+				if ((node.name() instanceof QName qname) && name.equals(qname.getLocalPart())) {
 					return true;
 				}
 				if (name.equals(node.name())) {
