@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,14 +16,13 @@
 
 package org.springframework.boot.build.toolchain;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.plugins.JavaPluginExtension;
-import org.gradle.api.tasks.compile.JavaCompile;
-import org.gradle.api.tasks.javadoc.Javadoc;
 import org.gradle.api.tasks.testing.Test;
 import org.gradle.jvm.toolchain.JavaLanguageVersion;
 import org.gradle.jvm.toolchain.JavaToolchainSpec;
@@ -56,8 +55,7 @@ public class ToolchainPlugin implements Plugin<Project> {
 			JavaToolchainSpec toolchainSpec = project.getExtensions().getByType(JavaPluginExtension.class)
 					.getToolchain();
 			toolchainSpec.getLanguageVersion().set(toolchain.getJavaVersion());
-			configureJavaCompileToolchain(project);
-			configureTestToolchain(project);
+			configureTestToolchain(project, toolchain);
 		}
 	}
 
@@ -67,27 +65,13 @@ public class ToolchainPlugin implements Plugin<Project> {
 	}
 
 	private void disableToolchainTasks(Project project) {
-		project.getTasks().withType(JavaCompile.class, (task) -> task.setEnabled(false));
-		project.getTasks().withType(Javadoc.class, (task) -> task.setEnabled(false));
 		project.getTasks().withType(Test.class, (task) -> task.setEnabled(false));
 	}
 
-	private void configureJavaCompileToolchain(Project project) {
-		project.getTasks().withType(JavaCompile.class, (compile) -> {
-			compile.getOptions().setFork(true);
-			// See https://github.com/gradle/gradle/issues/15538
-			List<String> forkArgs = Arrays.asList("--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED");
-			compile.getOptions().getForkOptions().getJvmArgs().addAll(forkArgs);
-		});
-	}
-
-	private void configureTestToolchain(Project project) {
-		project.getTasks().withType(Test.class, (test) -> {
-			// See https://github.com/spring-projects/spring-ldap/issues/570
-			List<String> arguments = Arrays.asList("--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED",
-					"--illegal-access=warn");
-			test.jvmArgs(arguments);
-		});
+	private void configureTestToolchain(Project project, ToolchainExtension toolchain) {
+		List<String> jvmArgs = new ArrayList<>();
+		jvmArgs.addAll(toolchain.getTestJvmArgs().getOrElse(Collections.emptyList()));
+		project.getTasks().withType(Test.class, (test) -> test.jvmArgs(jvmArgs));
 	}
 
 }
