@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,9 +18,9 @@ package org.springframework.boot.actuate.autoconfigure.metrics;
 
 import java.util.Arrays;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import io.micrometer.core.instrument.Meter;
 import io.micrometer.core.instrument.Meter.Id;
@@ -61,9 +61,12 @@ public class PropertiesMeterFilter implements MeterFilter {
 			return new MeterFilter() {
 			};
 		}
-		Tags commonTags = Tags.of(tags.entrySet().stream().map((entry) -> Tag.of(entry.getKey(), entry.getValue()))
-				.collect(Collectors.toList()));
+		Tags commonTags = Tags.of(tags.entrySet().stream().map(PropertiesMeterFilter::asTag).toList());
 		return MeterFilter.commonTags(commonTags);
+	}
+
+	private static Tag asTag(Entry<String, String> entry) {
+		return Tag.of(entry.getKey(), entry.getValue());
 	}
 
 	@Override
@@ -89,7 +92,8 @@ public class PropertiesMeterFilter implements MeterFilter {
 						convertMeterValue(id.getType(), lookup(distribution.getMinimumExpectedValue(), id, null)))
 				.maximumExpectedValue(
 						convertMeterValue(id.getType(), lookup(distribution.getMaximumExpectedValue(), id, null)))
-				.build().merge(config);
+				.expiry(lookupWithFallbackToAll(distribution.getExpiry(), id, null))
+				.bufferLength(lookupWithFallbackToAll(distribution.getBufferLength(), id, null)).build().merge(config);
 	}
 
 	private double[] convertServiceLevelObjectives(Meter.Type meterType, ServiceLevelObjectiveBoundary[] slo) {
