@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,15 +18,15 @@ package org.springframework.boot.autoconfigure.security.oauth2.client.servlet;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import javax.servlet.Filter;
-
+import jakarta.servlet.Filter;
 import org.junit.jupiter.api.Test;
 
+import org.springframework.boot.autoconfigure.AutoConfigurations;
+import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
 import org.springframework.boot.test.context.FilteredClassLoader;
-import org.springframework.boot.test.context.assertj.AssertableApplicationContext;
-import org.springframework.boot.test.context.runner.ApplicationContextRunner;
+import org.springframework.boot.test.context.assertj.AssertableWebApplicationContext;
+import org.springframework.boot.test.context.runner.WebApplicationContextRunner;
 import org.springframework.boot.web.embedded.tomcat.TomcatServletWebServerFactory;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -34,7 +34,6 @@ import org.springframework.context.annotation.Import;
 import org.springframework.security.config.BeanIds;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.security.oauth2.client.InMemoryOAuth2AuthorizedClientService;
 import org.springframework.security.oauth2.client.OAuth2AuthorizedClientService;
 import org.springframework.security.oauth2.client.registration.ClientRegistration;
@@ -59,7 +58,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  */
 class OAuth2WebSecurityConfigurationTests {
 
-	private final ApplicationContextRunner contextRunner = new ApplicationContextRunner();
+	private final WebApplicationContextRunner contextRunner = new WebApplicationContextRunner();
 
 	@Test
 	void securityConfigurerConfiguresOAuth2Login() {
@@ -117,20 +116,9 @@ class OAuth2WebSecurityConfigurationTests {
 	}
 
 	@Test
-	void securityFilterChainConfigBacksOffWhenOtherWebSecurityAdapterPresent() {
-		this.contextRunner
-				.withUserConfiguration(TestWebSecurityConfigurerConfig.class, OAuth2WebSecurityConfiguration.class)
-				.run((context) -> {
-					assertThat(getFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
-					assertThat(getFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
-					assertThat(context).getBean(OAuth2AuthorizedClientService.class).isNotNull();
-				});
-	}
-
-	@Test
 	void securityFilterChainConfigBacksOffWhenOtherSecurityFilterChainBeanPresent() {
-		this.contextRunner
-				.withUserConfiguration(TestSecurityFilterChainConfig.class, OAuth2WebSecurityConfiguration.class)
+		this.contextRunner.withConfiguration(AutoConfigurations.of(WebMvcAutoConfiguration.class))
+				.withUserConfiguration(TestSecurityFilterChainConfiguration.class, OAuth2WebSecurityConfiguration.class)
 				.run((context) -> {
 					assertThat(getFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
 					assertThat(getFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
@@ -167,11 +155,11 @@ class OAuth2WebSecurityConfigurationTests {
 				});
 	}
 
-	private List<Filter> getFilters(AssertableApplicationContext context, Class<? extends Filter> filter) {
+	private List<Filter> getFilters(AssertableWebApplicationContext context, Class<? extends Filter> filter) {
 		FilterChainProxy filterChain = (FilterChainProxy) context.getBean(BeanIds.SPRING_SECURITY_FILTER_CHAIN);
 		List<SecurityFilterChain> filterChains = filterChain.getFilterChains();
 		List<Filter> filters = filterChains.get(0).getFilters();
-		return filters.stream().filter(filter::isInstance).collect(Collectors.toList());
+		return filters.stream().filter(filter::isInstance).toList();
 	}
 
 	private boolean isEqual(ClientRegistration reg1, ClientRegistration reg2) {
@@ -231,18 +219,12 @@ class OAuth2WebSecurityConfigurationTests {
 
 	@Configuration(proxyBeanMethods = false)
 	@Import(ClientRegistrationRepositoryConfiguration.class)
-	static class TestWebSecurityConfigurerConfig extends WebSecurityConfigurerAdapter {
-
-	}
-
-	@Configuration(proxyBeanMethods = false)
-	@Import(ClientRegistrationRepositoryConfiguration.class)
-	static class TestSecurityFilterChainConfig {
+	static class TestSecurityFilterChainConfiguration {
 
 		@Bean
 		SecurityFilterChain testSecurityFilterChain(HttpSecurity http) throws Exception {
-			return http.antMatcher("/**").authorizeRequests((authorize) -> authorize.anyRequest().authenticated())
-					.build();
+			return http.securityMatcher("/**")
+					.authorizeHttpRequests((authorize) -> authorize.anyRequest().authenticated()).build();
 
 		}
 
