@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,27 +17,26 @@
 package org.springframework.boot.gradle.tasks.bundling;
 
 import java.io.IOException;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import groovy.lang.Closure;
 import org.gradle.api.Action;
 import org.gradle.api.DefaultTask;
-import org.gradle.api.GradleException;
-import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
 import org.gradle.api.file.RegularFileProperty;
 import org.gradle.api.provider.ListProperty;
+import org.gradle.api.provider.MapProperty;
 import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
+import org.gradle.api.tasks.InputFile;
 import org.gradle.api.tasks.Nested;
 import org.gradle.api.tasks.Optional;
+import org.gradle.api.tasks.PathSensitive;
+import org.gradle.api.tasks.PathSensitivity;
 import org.gradle.api.tasks.TaskAction;
 import org.gradle.api.tasks.options.Option;
-import org.gradle.util.ConfigureUtil;
+import org.gradle.work.DisableCachingByDefault;
 
 import org.springframework.boot.buildpack.platform.build.BuildRequest;
 import org.springframework.boot.buildpack.platform.build.Builder;
@@ -58,83 +57,52 @@ import org.springframework.util.StringUtils;
  *
  * @author Andy Wilkinson
  * @author Scott Frederick
+ * @author Rafael Ceccone
+ * @author Jeroen Meijer
+ * @author Julian Liebig
  * @since 2.3.0
  */
-public class BootBuildImage extends DefaultTask {
+@DisableCachingByDefault
+public abstract class BootBuildImage extends DefaultTask {
 
-	private static final String BUILDPACK_JVM_VERSION_KEY = "BP_JVM_VERSION";
+	private final Property<PullPolicy> pullPolicy;
 
 	private final String projectName;
 
-	private final Property<String> projectVersion;
+	private final CacheSpec buildCache;
 
-	private RegularFileProperty archiveFile;
+	private final CacheSpec launchCache;
 
-	private Property<JavaVersion> targetJavaVersion;
-
-	private String imageName;
-
-	private String builder;
-
-	private String runImage;
-
-	private Map<String, String> environment = new HashMap<>();
-
-	private boolean cleanCache;
-
-	private boolean verboseLogging;
-
-	private PullPolicy pullPolicy;
-
-	private boolean publish;
-
-	private final ListProperty<String> buildpacks;
-
-	private final ListProperty<String> bindings;
-
-	private final DockerSpec docker = new DockerSpec();
+	private final DockerSpec docker;
 
 	public BootBuildImage() {
-		this.archiveFile = getProject().getObjects().fileProperty();
-		this.targetJavaVersion = getProject().getObjects().property(JavaVersion.class);
 		this.projectName = getProject().getName();
-		this.projectVersion = getProject().getObjects().property(String.class);
 		Project project = getProject();
-		this.projectVersion.set(getProject().provider(() -> project.getVersion().toString()));
-		this.buildpacks = getProject().getObjects().listProperty(String.class);
-		this.bindings = getProject().getObjects().listProperty(String.class);
+		Property<String> projectVersion = project.getObjects().property(String.class)
+				.convention(project.provider(() -> project.getVersion().toString()));
+		getImageName().convention(project.provider(() -> {
+			ImageName imageName = ImageName.of(this.projectName);
+			if ("unspecified".equals(projectVersion.get())) {
+				return ImageReference.of(imageName).toString();
+			}
+			return ImageReference.of(imageName, projectVersion.get()).toString();
+		}));
+		getCleanCache().convention(false);
+		getVerboseLogging().convention(false);
+		getPublish().convention(false);
+		this.buildCache = getProject().getObjects().newInstance(CacheSpec.class);
+		this.launchCache = getProject().getObjects().newInstance(CacheSpec.class);
+		this.docker = getProject().getObjects().newInstance(DockerSpec.class);
+		this.pullPolicy = getProject().getObjects().property(PullPolicy.class);
 	}
 
 	/**
 	 * Returns the property for the archive file from which the image will be built.
 	 * @return the archive file property
 	 */
-	@Input
-	public RegularFileProperty getArchiveFile() {
-		return this.archiveFile;
-	}
-
-	/**
-	 * Returns the property for the archive file from which the image will be built.
-	 * @return the archive file property
-	 * @deprecated since 2.5.0 for removal in 2.7.0 in favor of {@link #getArchiveFile()}
-	 */
-	@Deprecated
-	@Input
-	public RegularFileProperty getJar() {
-		return this.archiveFile;
-	}
-
-	/**
-	 * Returns the target Java version of the project (e.g. as provided by the
-	 * {@code targetCompatibility} build property).
-	 * @return the target Java version
-	 */
-	@Input
-	@Optional
-	public Property<JavaVersion> getTargetJavaVersion() {
-		return this.targetJavaVersion;
-	}
+	@InputFile
+	@PathSensitive(PathSensitivity.RELATIVE)
+	public abstract RegularFileProperty getArchiveFile();
 
 	/**
 	 * Returns the name of the image that will be built. When {@code null}, the name will
@@ -144,18 +112,8 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public String getImageName() {
-		return this.imageName;
-	}
-
-	/**
-	 * Sets the name of the image that will be built.
-	 * @param imageName name of the image
-	 */
 	@Option(option = "imageName", description = "The name of the image to generate")
-	public void setImageName(String imageName) {
-		this.imageName = imageName;
-	}
+	public abstract Property<String> getImageName();
 
 	/**
 	 * Returns the builder that will be used to build the image. When {@code null}, the
@@ -164,18 +122,8 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public String getBuilder() {
-		return this.builder;
-	}
-
-	/**
-	 * Sets the builder that will be used to build the image.
-	 * @param builder the builder
-	 */
 	@Option(option = "builder", description = "The name of the builder image to use")
-	public void setBuilder(String builder) {
-		this.builder = builder;
-	}
+	public abstract Property<String> getBuilder();
 
 	/**
 	 * Returns the run image that will be included in the built image. When {@code null},
@@ -184,88 +132,32 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public String getRunImage() {
-		return this.runImage;
-	}
-
-	/**
-	 * Sets the run image that will be included in the built image.
-	 * @param runImage the run image
-	 */
 	@Option(option = "runImage", description = "The name of the run image to use")
-	public void setRunImage(String runImage) {
-		this.runImage = runImage;
-	}
+	public abstract Property<String> getRunImage();
 
 	/**
 	 * Returns the environment that will be used when building the image.
 	 * @return the environment
 	 */
 	@Input
-	public Map<String, String> getEnvironment() {
-		return this.environment;
-	}
-
-	/**
-	 * Sets the environment that will be used when building the image.
-	 * @param environment the environment
-	 */
-	public void setEnvironment(Map<String, String> environment) {
-		this.environment = environment;
-	}
-
-	/**
-	 * Add an entry to the environment that will be used when building the image.
-	 * @param name the name of the entry
-	 * @param value the value of the entry
-	 */
-	public void environment(String name, String value) {
-		this.environment.put(name, value);
-	}
-
-	/**
-	 * Adds entries to the environment that will be used when building the image.
-	 * @param entries the entries to add to the environment
-	 */
-	public void environment(Map<String, String> entries) {
-		this.environment.putAll(entries);
-	}
+	public abstract MapProperty<String, String> getEnvironment();
 
 	/**
 	 * Returns whether caches should be cleaned before packaging.
 	 * @return whether caches should be cleaned
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isCleanCache() {
-		return this.cleanCache;
-	}
-
-	/**
-	 * Sets whether caches should be cleaned before packaging.
-	 * @param cleanCache {@code true} to clean the cache, otherwise {@code false}.
-	 */
 	@Option(option = "cleanCache", description = "Clean caches before packaging")
-	public void setCleanCache(boolean cleanCache) {
-		this.cleanCache = cleanCache;
-	}
+	public abstract Property<Boolean> getCleanCache();
 
 	/**
 	 * Whether verbose logging should be enabled while building the image.
 	 * @return whether verbose logging should be enabled
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isVerboseLogging() {
-		return this.verboseLogging;
-	}
-
-	/**
-	 * Sets whether verbose logging should be enabled while building the image.
-	 * @param verboseLogging {@code true} to enable verbose logging, otherwise
-	 * {@code false}.
-	 */
-	public void setVerboseLogging(boolean verboseLogging) {
-		this.verboseLogging = verboseLogging;
-	}
+	public abstract Property<Boolean> getVerboseLogging();
 
 	/**
 	 * Returns image pull policy that will be used when building the image.
@@ -273,36 +165,27 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public PullPolicy getPullPolicy() {
+	@Option(option = "pullPolicy", description = "The image pull policy")
+	public Property<PullPolicy> getPullPolicy() {
 		return this.pullPolicy;
 	}
 
 	/**
 	 * Sets image pull policy that will be used when building the image.
-	 * @param pullPolicy image pull policy {@link PullPolicy}
+	 * @param pullPolicy the pull policy to use
 	 */
-	@Option(option = "pullPolicy", description = "The image pull policy")
-	public void setPullPolicy(PullPolicy pullPolicy) {
-		this.pullPolicy = pullPolicy;
+	public void setPullPolicy(String pullPolicy) {
+		getPullPolicy().set(PullPolicy.valueOf(pullPolicy));
 	}
 
 	/**
 	 * Whether the built image should be pushed to a registry.
 	 * @return whether the built image should be pushed
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isPublish() {
-		return this.publish;
-	}
-
-	/**
-	 * Sets whether the built image should be pushed to a registry.
-	 * @param publish {@code true} the push the built image to a registry. {@code false}.
-	 */
 	@Option(option = "publishImage", description = "Publish the built image to a registry")
-	public void setPublish(boolean publish) {
-		this.publish = publish;
-	}
+	public abstract Property<Boolean> getPublish();
 
 	/**
 	 * Returns the buildpacks that will be used when building the image.
@@ -310,33 +193,7 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public List<String> getBuildpacks() {
-		return this.buildpacks.getOrNull();
-	}
-
-	/**
-	 * Sets the buildpacks that will be used when building the image.
-	 * @param buildpacks the buildpack references
-	 */
-	public void setBuildpacks(List<String> buildpacks) {
-		this.buildpacks.set(buildpacks);
-	}
-
-	/**
-	 * Add an entry to the buildpacks that will be used when building the image.
-	 * @param buildpack the buildpack reference
-	 */
-	public void buildpack(String buildpack) {
-		this.buildpacks.add(buildpack);
-	}
-
-	/**
-	 * Adds entries to the buildpacks that will be used when building the image.
-	 * @param buildpacks the buildpack references
-	 */
-	public void buildpacks(List<String> buildpacks) {
-		this.buildpacks.addAll(buildpacks);
-	}
+	public abstract ListProperty<String> getBuildpacks();
 
 	/**
 	 * Returns the volume bindings that will be mounted to the container when building the
@@ -345,35 +202,61 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public List<String> getBindings() {
-		return this.bindings.getOrNull();
+	public abstract ListProperty<String> getBindings();
+
+	/**
+	 * Returns the tags that will be created for the built image.
+	 * @return the tags
+	 */
+	@Input
+	@Optional
+	public abstract ListProperty<String> getTags();
+
+	/**
+	 * Returns the network the build container will connect to.
+	 * @return the network
+	 */
+	@Input
+	@Optional
+	@Option(option = "network", description = "Connect detect and build containers to network")
+	public abstract Property<String> getNetwork();
+
+	/**
+	 * Returns the build cache that will be used when building the image.
+	 * @return the cache
+	 */
+	@Nested
+	@Optional
+	public CacheSpec getBuildCache() {
+		return this.buildCache;
 	}
 
 	/**
-	 * Sets the volume bindings that will be mounted to the container when building the
-	 * image.
-	 * @param bindings the bindings
+	 * Customizes the {@link CacheSpec} for the build cache using the given
+	 * {@code action}.
+	 * @param action the action
 	 */
-	public void setBindings(List<String> bindings) {
-		this.bindings.set(bindings);
+	public void buildCache(Action<CacheSpec> action) {
+		action.execute(this.buildCache);
 	}
 
 	/**
-	 * Add an entry to the volume bindings that will be mounted to the container when
-	 * building the image.
-	 * @param binding the binding
+	 * Returns the launch cache that will be used when building the image.
+	 * @return the cache
 	 */
-	public void binding(String binding) {
-		this.bindings.add(binding);
+	@Nested
+	@Optional
+	public CacheSpec getLaunchCache() {
+		return this.launchCache;
 	}
 
 	/**
-	 * Add entries to the volume bindings that will be mounted to the container when
-	 * building the image.
-	 * @param bindings the bindings
+	 * Customizes the {@link CacheSpec} for the launch cache using the given
+	 * {@code action}.
+	 * @param action the action
 	 */
-	public void bindings(List<String> bindings) {
-		this.bindings.addAll(bindings);
+	public void launchCache(Action<CacheSpec> action) {
+		action.execute(this.launchCache);
 	}
 
 	/**
@@ -395,15 +278,6 @@ public class BootBuildImage extends DefaultTask {
 		action.execute(this.docker);
 	}
 
-	/**
-	 * Configures the Docker connection using the given {@code closure}.
-	 * @param closure the closure to apply
-	 * @since 2.4.0
-	 */
-	public void docker(Closure<?> closure) {
-		docker(ConfigureUtil.configureUsing(closure));
-	}
-
 	@TaskAction
 	void buildImage() throws DockerEngineException, IOException {
 		Builder builder = new Builder(this.docker.asDockerConfiguration());
@@ -412,19 +286,8 @@ public class BootBuildImage extends DefaultTask {
 	}
 
 	BuildRequest createRequest() {
-		return customize(BuildRequest.of(determineImageReference(),
-				(owner) -> new ZipFileTarArchive(this.archiveFile.get().getAsFile(), owner)));
-	}
-
-	private ImageReference determineImageReference() {
-		if (StringUtils.hasText(this.imageName)) {
-			return ImageReference.of(this.imageName);
-		}
-		ImageName imageName = ImageName.of(this.projectName);
-		if ("unspecified".equals(this.projectVersion.get())) {
-			return ImageReference.of(imageName);
-		}
-		return ImageReference.of(imageName, this.projectVersion.get());
+		return customize(BuildRequest.of(getImageName().map(ImageReference::of).get(),
+				(owner) -> new ZipFileTarArchive(getArchiveFile().get().getAsFile(), owner)));
 	}
 
 	private BuildRequest customize(BuildRequest request) {
@@ -432,35 +295,38 @@ public class BootBuildImage extends DefaultTask {
 		request = customizeRunImage(request);
 		request = customizeEnvironment(request);
 		request = customizeCreator(request);
-		request = request.withCleanCache(this.cleanCache);
-		request = request.withVerboseLogging(this.verboseLogging);
+		request = request.withCleanCache(getCleanCache().get());
+		request = request.withVerboseLogging(getVerboseLogging().get());
 		request = customizePullPolicy(request);
 		request = customizePublish(request);
 		request = customizeBuildpacks(request);
 		request = customizeBindings(request);
+		request = customizeTags(request);
+		request = customizeCaches(request);
+		request = request.withNetwork(getNetwork().getOrNull());
 		return request;
 	}
 
 	private BuildRequest customizeBuilder(BuildRequest request) {
-		if (StringUtils.hasText(this.builder)) {
-			return request.withBuilder(ImageReference.of(this.builder));
+		String builder = getBuilder().getOrNull();
+		if (StringUtils.hasText(builder)) {
+			return request.withBuilder(ImageReference.of(builder));
 		}
 		return request;
 	}
 
 	private BuildRequest customizeRunImage(BuildRequest request) {
-		if (StringUtils.hasText(this.runImage)) {
-			return request.withRunImage(ImageReference.of(this.runImage));
+		String runImage = getRunImage().getOrNull();
+		if (StringUtils.hasText(runImage)) {
+			return request.withRunImage(ImageReference.of(runImage));
 		}
 		return request;
 	}
 
 	private BuildRequest customizeEnvironment(BuildRequest request) {
-		if (this.environment != null && !this.environment.isEmpty()) {
-			request = request.withEnv(this.environment);
-		}
-		if (this.targetJavaVersion.isPresent() && !request.getEnv().containsKey(BUILDPACK_JVM_VERSION_KEY)) {
-			request = request.withEnv(BUILDPACK_JVM_VERSION_KEY, translateTargetJavaVersion());
+		Map<String, String> environment = getEnvironment().getOrNull();
+		if (environment != null && !environment.isEmpty()) {
+			request = request.withEnv(environment);
 		}
 		return request;
 	}
@@ -474,40 +340,50 @@ public class BootBuildImage extends DefaultTask {
 	}
 
 	private BuildRequest customizePullPolicy(BuildRequest request) {
-		if (this.pullPolicy != null) {
-			request = request.withPullPolicy(this.pullPolicy);
+		PullPolicy pullPolicy = getPullPolicy().getOrNull();
+		if (pullPolicy != null) {
+			request = request.withPullPolicy(pullPolicy);
 		}
 		return request;
 	}
 
 	private BuildRequest customizePublish(BuildRequest request) {
-		boolean publishRegistryAuthNotConfigured = this.docker == null || this.docker.getPublishRegistry() == null
-				|| this.docker.getPublishRegistry().hasEmptyAuth();
-		if (this.publish && publishRegistryAuthNotConfigured) {
-			throw new GradleException("Publishing an image requires docker.publishRegistry to be configured");
-		}
-		request = request.withPublish(this.publish);
+		request = request.withPublish(getPublish().get());
 		return request;
 	}
 
 	private BuildRequest customizeBuildpacks(BuildRequest request) {
-		List<String> buildpacks = this.buildpacks.getOrNull();
+		List<String> buildpacks = getBuildpacks().getOrNull();
 		if (buildpacks != null && !buildpacks.isEmpty()) {
-			return request.withBuildpacks(buildpacks.stream().map(BuildpackReference::of).collect(Collectors.toList()));
+			return request.withBuildpacks(buildpacks.stream().map(BuildpackReference::of).toList());
 		}
 		return request;
 	}
 
 	private BuildRequest customizeBindings(BuildRequest request) {
-		List<String> bindings = this.bindings.getOrNull();
+		List<String> bindings = getBindings().getOrNull();
 		if (bindings != null && !bindings.isEmpty()) {
-			return request.withBindings(bindings.stream().map(Binding::of).collect(Collectors.toList()));
+			return request.withBindings(bindings.stream().map(Binding::of).toList());
 		}
 		return request;
 	}
 
-	private String translateTargetJavaVersion() {
-		return this.targetJavaVersion.get().getMajorVersion() + ".*";
+	private BuildRequest customizeTags(BuildRequest request) {
+		List<String> tags = getTags().getOrNull();
+		if (tags != null && !tags.isEmpty()) {
+			return request.withTags(tags.stream().map(ImageReference::of).toList());
+		}
+		return request;
+	}
+
+	private BuildRequest customizeCaches(BuildRequest request) {
+		if (this.buildCache.asCache() != null) {
+			request = request.withBuildCache(this.buildCache.asCache());
+		}
+		if (this.launchCache.asCache() != null) {
+			request = request.withLaunchCache(this.launchCache.asCache());
+		}
+		return request;
 	}
 
 }
