@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,11 +23,14 @@ import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-import groovy.lang.Closure;
+import javax.inject.Inject;
+
 import org.gradle.api.Action;
+import org.gradle.api.model.ObjectFactory;
+import org.gradle.api.provider.ListProperty;
+import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.Optional;
-import org.gradle.util.ConfigureUtil;
 
 import org.springframework.boot.loader.tools.Layer;
 import org.springframework.boot.loader.tools.Layers;
@@ -48,58 +51,38 @@ import org.springframework.util.Assert;
  * @author Phillip Webb
  * @since 2.3.0
  */
-public class LayeredSpec {
+public abstract class LayeredSpec {
 
-	private boolean includeLayerTools = true;
+	private ApplicationSpec application;
 
-	private boolean enabled = true;
-
-	private ApplicationSpec application = new ApplicationSpec();
-
-	private DependenciesSpec dependencies = new DependenciesSpec();
-
-	@Optional
-	private List<String> layerOrder;
+	private DependenciesSpec dependencies;
 
 	private Layers layers;
+
+	@Inject
+	public LayeredSpec(ObjectFactory objects) {
+		this.application = objects.newInstance(ApplicationSpec.class);
+		this.dependencies = objects.newInstance(DependenciesSpec.class);
+		getEnabled().convention(true);
+		getIncludeLayerTools().convention(true);
+	}
 
 	/**
 	 * Returns whether the layer tools should be included as a dependency in the layered
 	 * archive.
 	 * @return whether the layer tools should be included
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isIncludeLayerTools() {
-		return this.includeLayerTools;
-	}
-
-	/**
-	 * Sets whether the layer tools should be included as a dependency in the layered
-	 * archive.
-	 * @param includeLayerTools {@code true} if the layer tools should be included,
-	 * otherwise {@code false}
-	 */
-	public void setIncludeLayerTools(boolean includeLayerTools) {
-		this.includeLayerTools = includeLayerTools;
-	}
+	public abstract Property<Boolean> getIncludeLayerTools();
 
 	/**
 	 * Returns whether the layers.idx should be included in the archive.
 	 * @return whether the layers.idx should be included
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isEnabled() {
-		return this.enabled;
-	}
-
-	/**
-	 * Sets whether the layers.idx should be included in the archive.
-	 * @param enabled {@code true} layers.idx should be included in the archive, otherwise
-	 * {@code false}
-	 */
-	public void setEnabled(boolean enabled) {
-		this.enabled = enabled;
-	}
+	public abstract Property<Boolean> getEnabled();
 
 	/**
 	 * Returns the {@link ApplicationSpec} that controls the layers to which application
@@ -126,14 +109,6 @@ public class LayeredSpec {
 	 */
 	public void application(Action<ApplicationSpec> action) {
 		action.execute(this.application);
-	}
-
-	/**
-	 * Customizes the {@link ApplicationSpec} using the given {@code closure}.
-	 * @param closure the closure
-	 */
-	public void application(Closure<?> closure) {
-		application(ConfigureUtil.configureUsing(closure));
 	}
 
 	/**
@@ -164,38 +139,13 @@ public class LayeredSpec {
 	}
 
 	/**
-	 * Customizes the {@link DependenciesSpec} using the given {@code closure}.
-	 * @param closure the closure
-	 */
-	public void dependencies(Closure<?> closure) {
-		dependencies(ConfigureUtil.configureUsing(closure));
-	}
-
-	/**
 	 * Returns the order of the layers in the archive from least to most frequently
 	 * changing.
 	 * @return the layer order
 	 */
 	@Input
-	public List<String> getLayerOrder() {
-		return this.layerOrder;
-	}
-
-	/**
-	 * Sets the order of the layers in the archive from least to most frequently changing.
-	 * @param layerOrder the layer order
-	 */
-	public void setLayerOrder(String... layerOrder) {
-		this.layerOrder = Arrays.asList(layerOrder);
-	}
-
-	/**
-	 * Sets the order of the layers in the archive from least to most frequently changing.
-	 * @param layerOrder the layer order
-	 */
-	public void setLayerOrder(List<String> layerOrder) {
-		this.layerOrder = layerOrder;
-	}
+	@Optional
+	public abstract ListProperty<String> getLayerOrder();
 
 	/**
 	 * Return this configuration as a {@link Layers} instance. This method should only be
@@ -212,12 +162,13 @@ public class LayeredSpec {
 	}
 
 	private Layers createLayers() {
-		if (this.layerOrder == null || this.layerOrder.isEmpty()) {
+		List<String> layerOrder = getLayerOrder().getOrNull();
+		if (layerOrder == null || layerOrder.isEmpty()) {
 			Assert.state(this.application.isEmpty() && this.dependencies.isEmpty(),
 					"The 'layerOrder' must be defined when using custom layering");
 			return Layers.IMPLICIT;
 		}
-		List<Layer> layers = this.layerOrder.stream().map(Layer::new).collect(Collectors.toList());
+		List<Layer> layers = layerOrder.stream().map(Layer::new).toList();
 		return new CustomLayers(layers, this.application.asSelectors(), this.dependencies.asSelectors());
 	}
 
@@ -244,10 +195,6 @@ public class LayeredSpec {
 			this.intoLayers.add(this.specFactory.apply(layer));
 		}
 
-		public void intoLayer(String layer, Closure<?> closure) {
-			intoLayer(layer, ConfigureUtil.configureUsing(closure));
-		}
-
 		public void intoLayer(String layer, Action<IntoLayerSpec> action) {
 			IntoLayerSpec spec = this.specFactory.apply(layer);
 			action.execute(spec);
@@ -255,7 +202,7 @@ public class LayeredSpec {
 		}
 
 		<T> List<ContentSelector<T>> asSelectors(Function<IntoLayerSpec, ContentSelector<T>> selectorFactory) {
-			return this.intoLayers.stream().map(selectorFactory).collect(Collectors.toList());
+			return this.intoLayers.stream().map(selectorFactory).toList();
 		}
 
 	}
@@ -363,15 +310,13 @@ public class LayeredSpec {
 		ContentSelector<Library> asLibrarySelector(Function<String, ContentFilter<Library>> filterFactory) {
 			Layer layer = new Layer(getIntoLayer());
 			List<ContentFilter<Library>> includeFilters = getIncludes().stream().map(filterFactory)
-					.collect(Collectors.toList());
+					.collect(Collectors.toCollection(ArrayList::new));
 			if (this.includeProjectDependencies) {
-				includeFilters = new ArrayList<>(includeFilters);
 				includeFilters.add(Library::isLocal);
 			}
 			List<ContentFilter<Library>> excludeFilters = getExcludes().stream().map(filterFactory)
-					.collect(Collectors.toList());
+					.collect(Collectors.toCollection(ArrayList::new));
 			if (this.excludeProjectDependencies) {
-				excludeFilters = new ArrayList<>(excludeFilters);
 				excludeFilters.add(Library::isLocal);
 			}
 			return new IncludeExcludeContentSelector<>(layer, includeFilters, excludeFilters);
@@ -384,6 +329,11 @@ public class LayeredSpec {
 	 * resources belong.
 	 */
 	public static class ApplicationSpec extends IntoLayersSpec {
+
+		@Inject
+		public ApplicationSpec() {
+			super(new IntoLayerSpecFactory());
+		}
 
 		/**
 		 * Creates a new {@code ApplicationSpec} with the given {@code contents}.
@@ -413,6 +363,11 @@ public class LayeredSpec {
 	 * An {@link IntoLayersSpec} that controls the layers to which dependencies belong.
 	 */
 	public static class DependenciesSpec extends IntoLayersSpec implements Serializable {
+
+		@Inject
+		public DependenciesSpec() {
+			super(new IntoLayerSpecFactory());
+		}
 
 		/**
 		 * Creates a new {@code DependenciesSpec} with the given {@code contents}.
