@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,11 +22,12 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.attribute.PosixFilePermission;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -38,7 +39,6 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
@@ -49,6 +49,7 @@ import org.gradle.api.DomainObjectSet;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.artifacts.DependencySet;
+import org.gradle.api.artifacts.LenientConfiguration;
 import org.gradle.api.artifacts.ModuleVersionIdentifier;
 import org.gradle.api.artifacts.ProjectDependency;
 import org.gradle.api.artifacts.ResolvableDependencies;
@@ -61,13 +62,14 @@ import org.gradle.api.artifacts.component.ProjectComponentIdentifier;
 import org.gradle.api.internal.file.archive.ZipCopyAction;
 import org.gradle.api.tasks.bundling.AbstractArchiveTask;
 import org.gradle.api.tasks.bundling.Jar;
-import org.gradle.testfixtures.ProjectBuilder;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
+import org.springframework.boot.gradle.junit.GradleProjectBuilder;
 import org.springframework.boot.loader.tools.DefaultLaunchScript;
 import org.springframework.boot.loader.tools.JarModeLibrary;
+import org.springframework.util.FileCopyUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -112,16 +114,11 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 
 	@BeforeEach
 	void createTask() {
-		try {
-			File projectDir = new File(this.temp, "project");
-			projectDir.mkdirs();
-			this.project = ProjectBuilder.builder().withProjectDir(projectDir).build();
-			this.project.setDescription("Test project for " + this.taskClass.getSimpleName());
-			this.task = configure(this.project.getTasks().create("testArchive", this.taskClass));
-		}
-		catch (IOException ex) {
-			throw new RuntimeException(ex);
-		}
+		File projectDir = new File(this.temp, "project");
+		projectDir.mkdirs();
+		this.project = GradleProjectBuilder.builder().withProjectDir(projectDir).build();
+		this.project.setDescription("Test project for " + this.taskClass.getSimpleName());
+		this.task = configure(this.project.getTasks().create("testArchive", this.taskClass));
 	}
 
 	@Test
@@ -279,11 +276,14 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		properties.put("initInfoProvides", this.task.getArchiveBaseName().get());
 		properties.put("initInfoShortDescription", this.project.getDescription());
 		properties.put("initInfoDescription", this.project.getDescription());
-		assertThat(Files.readAllBytes(this.task.getArchiveFile().get().getAsFile().toPath()))
+		File archiveFile = this.task.getArchiveFile().get().getAsFile();
+		assertThat(Files.readAllBytes(archiveFile.toPath()))
 				.startsWith(new DefaultLaunchScript(null, properties).toByteArray());
+		try (ZipFile zipFile = new ZipFile(archiveFile)) {
+			assertThat(zipFile.getEntries().hasMoreElements()).isTrue();
+		}
 		try {
-			Set<PosixFilePermission> permissions = Files
-					.getPosixFilePermissions(this.task.getArchiveFile().get().getAsFile().toPath());
+			Set<PosixFilePermission> permissions = Files.getPosixFilePermissions(archiveFile.toPath());
 			assertThat(permissions).contains(PosixFilePermission.OWNER_EXECUTE);
 		}
 		catch (UnsupportedOperationException ex) {
@@ -295,11 +295,11 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	void customLaunchScriptCanBePrepended() throws IOException {
 		this.task.getMainClass().set("com.example.Main");
 		File customScript = new File(this.temp, "custom.script");
-		Files.write(customScript.toPath(), Arrays.asList("custom script"), StandardOpenOption.CREATE);
+		Files.writeString(customScript.toPath(), "custom script", StandardOpenOption.CREATE);
 		this.task.launchScript((configuration) -> configuration.setScript(customScript));
 		executeTask();
-		assertThat(Files.readAllBytes(this.task.getArchiveFile().get().getAsFile().toPath()))
-				.startsWith("custom script".getBytes());
+		Path path = this.task.getArchiveFile().get().getAsFile().toPath();
+		assertThat(Files.readString(path, StandardCharsets.ISO_8859_1)).startsWith("custom script");
 	}
 
 	@Test
@@ -311,10 +311,11 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			configuration.getProperties().put("initInfoDescription", "description");
 		});
 		executeTask();
-		byte[] bytes = Files.readAllBytes(this.task.getArchiveFile().get().getAsFile().toPath());
-		assertThat(bytes).containsSequence("Provides:          provides".getBytes());
-		assertThat(bytes).containsSequence("Short-Description: short description".getBytes());
-		assertThat(bytes).containsSequence("Description:       description".getBytes());
+		Path path = this.task.getArchiveFile().get().getAsFile().toPath();
+		String content = Files.readString(path, StandardCharsets.ISO_8859_1);
+		assertThat(content).containsSequence("Provides:          provides");
+		assertThat(content).containsSequence("Short-Description: short description");
+		assertThat(content).containsSequence("Description:       description");
 	}
 
 	@Test
@@ -450,7 +451,8 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 
 	@Test
 	void jarWhenLayersDisabledShouldNotContainLayersIndex() throws IOException {
-		List<String> entryNames = getEntryNames(createLayeredJar((configuration) -> configuration.setEnabled(false)));
+		List<String> entryNames = getEntryNames(
+				createLayeredJar((configuration) -> configuration.getEnabled().set(false)));
 		assertThat(entryNames).doesNotContain(this.indexPath + "layers.idx");
 	}
 
@@ -482,6 +484,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			expected.add("- \"dependencies\":");
 			expected.add("  - \"" + this.libPath + "first-library.jar\"");
 			expected.add("  - \"" + this.libPath + "first-project-library.jar\"");
+			expected.add("  - \"" + this.libPath + "fourth-library.jar\"");
 			expected.add("  - \"" + this.libPath + "second-library.jar\"");
 			if (!layerToolsJar.contains("SNAPSHOT")) {
 				expected.add("  - \"" + layerToolsJar + "\"");
@@ -497,9 +500,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			expected.add("- \"application\":");
 			Set<String> applicationContents = new TreeSet<>();
 			applicationContents.add("  - \"" + this.classesPath + "\"");
-			if (archiveHasClasspathIndex()) {
-				applicationContents.add("  - \"" + this.indexPath + "classpath.idx\"");
-			}
+			applicationContents.add("  - \"" + this.indexPath + "classpath.idx\"");
 			applicationContents.add("  - \"" + this.indexPath + "layers.idx\"");
 			applicationContents.add("  - \"META-INF/\"");
 			expected.addAll(applicationContents);
@@ -519,7 +520,8 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 				dependencies.intoLayer("my-internal-deps", (spec) -> spec.include("com.example:*:*"));
 				dependencies.intoLayer("my-deps");
 			});
-			layered.setLayerOrder("my-deps", "my-internal-deps", "my-snapshot-deps", "resources", "application");
+			layered.getLayerOrder()
+					.set(List.of("my-deps", "my-internal-deps", "my-snapshot-deps", "resources", "application"));
 		});
 		try (JarFile jarFile = new JarFile(jar)) {
 			List<String> entryNames = getEntryNames(jar);
@@ -538,6 +540,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			expected.add("- \"my-internal-deps\":");
 			expected.add("  - \"" + this.libPath + "first-library.jar\"");
 			expected.add("  - \"" + this.libPath + "first-project-library.jar\"");
+			expected.add("  - \"" + this.libPath + "fourth-library.jar\"");
 			expected.add("  - \"" + this.libPath + "second-library.jar\"");
 			expected.add("- \"my-snapshot-deps\":");
 			expected.add("  - \"" + this.libPath + "second-project-library-SNAPSHOT.jar\"");
@@ -548,9 +551,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			Set<String> applicationContents = new TreeSet<>();
 			applicationContents.add("  - \"" + this.classesPath + "application.properties\"");
 			applicationContents.add("  - \"" + this.classesPath + "com/\"");
-			if (archiveHasClasspathIndex()) {
-				applicationContents.add("  - \"" + this.indexPath + "classpath.idx\"");
-			}
+			applicationContents.add("  - \"" + this.indexPath + "classpath.idx\"");
 			applicationContents.add("  - \"" + this.indexPath + "layers.idx\"");
 			applicationContents.add("  - \"META-INF/\"");
 			applicationContents.add("  - \"org/\"");
@@ -568,7 +569,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	@Test
 	void whenArchiveIsLayeredAndIncludeLayerToolsIsFalseThenLayerToolsAreNotAddedToTheJar() throws IOException {
 		List<String> entryNames = getEntryNames(
-				createLayeredJar((configuration) -> configuration.setIncludeLayerTools(false)));
+				createLayeredJar((configuration) -> configuration.getIncludeLayerTools().set(false)));
 		assertThat(entryNames)
 				.doesNotContain(this.indexPath + "layers/dependencies/lib/spring-boot-jarmode-layertools.jar");
 	}
@@ -583,7 +584,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		return file;
 	}
 
-	private T configure(T task) throws IOException {
+	private T configure(T task) {
 		AbstractArchiveTask archiveTask = task;
 		archiveTask.getArchiveBaseName().set("test");
 		File destination = new File(this.temp, "destination");
@@ -620,25 +621,43 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	}
 
 	File createLayeredJar() throws IOException {
-		return createLayeredJar((spec) -> {
+		return createLayeredJar(false);
+	}
+
+	File createLayeredJar(boolean addReachabilityProperties) throws IOException {
+		return createLayeredJar(addReachabilityProperties, (spec) -> {
 		});
 	}
 
 	File createLayeredJar(Action<LayeredSpec> action) throws IOException {
+		return createLayeredJar(false, action);
+	}
+
+	File createLayeredJar(boolean addReachabilityProperties, Action<LayeredSpec> action) throws IOException {
 		applyLayered(action);
-		addContent();
+		addContent(addReachabilityProperties);
+		executeTask();
+		return getTask().getArchiveFile().get().getAsFile();
+	}
+
+	File createPopulatedJar() throws IOException {
+		return createPopulatedJar(false);
+	}
+
+	File createPopulatedJar(boolean addReachabilityProperties) throws IOException {
+		addContent(addReachabilityProperties);
 		executeTask();
 		return getTask().getArchiveFile().get().getAsFile();
 	}
 
 	abstract void applyLayered(Action<LayeredSpec> action);
 
-	boolean archiveHasClasspathIndex() {
-		return true;
+	void addContent() throws IOException {
+		addContent(false);
 	}
 
 	@SuppressWarnings("unchecked")
-	void addContent() throws IOException {
+	void addContent(boolean addReachabilityProperties) throws IOException {
 		this.task.getMainClass().set("com.example.Main");
 		File classesJavaMain = new File(this.temp, "classes/java/main");
 		File applicationClass = new File(classesJavaMain, "com/example/Application.class");
@@ -652,20 +671,28 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		staticResources.mkdir();
 		File css = new File(staticResources, "test.css");
 		css.createNewFile();
+		if (addReachabilityProperties) {
+			createReachabilityProperties(resourcesMain, "com.example", "first-library", "1.0.0", "true");
+			createReachabilityProperties(resourcesMain, "com.example", "second-library", "1.0.0", "true");
+			createReachabilityProperties(resourcesMain, "com.example", "fourth-library", "1.0.0", "false");
+		}
 		this.task.classpath(classesJavaMain, resourcesMain, jarFile("first-library.jar"), jarFile("second-library.jar"),
-				jarFile("third-library-SNAPSHOT.jar"), jarFile("first-project-library.jar"),
-				jarFile("second-project-library-SNAPSHOT.jar"));
+				jarFile("third-library-SNAPSHOT.jar"), jarFile("fourth-library.jar"),
+				jarFile("first-project-library.jar"), jarFile("second-project-library-SNAPSHOT.jar"));
 		Set<ResolvedArtifact> artifacts = new LinkedHashSet<>();
 		artifacts.add(mockLibraryArtifact("first-library.jar", "com.example", "first-library", "1.0.0"));
 		artifacts.add(mockLibraryArtifact("second-library.jar", "com.example", "second-library", "1.0.0"));
 		artifacts.add(
 				mockLibraryArtifact("third-library-SNAPSHOT.jar", "com.example", "third-library", "1.0.0.SNAPSHOT"));
+		artifacts.add(mockLibraryArtifact("fourth-library.jar", "com.example", "fourth-library", "1.0.0"));
 		artifacts
 				.add(mockProjectArtifact("first-project-library.jar", "com.example", "first-project-library", "1.0.0"));
 		artifacts.add(mockProjectArtifact("second-project-library-SNAPSHOT.jar", "com.example",
 				"second-project-library", "1.0.0.SNAPSHOT"));
 		ResolvedConfiguration resolvedConfiguration = mock(ResolvedConfiguration.class);
-		given(resolvedConfiguration.getResolvedArtifacts()).willReturn(artifacts);
+		LenientConfiguration lenientConfiguration = mock(LenientConfiguration.class);
+		given(resolvedConfiguration.getLenientConfiguration()).willReturn(lenientConfiguration);
+		given(lenientConfiguration.getArtifacts()).willReturn(artifacts);
 		Configuration configuration = mock(Configuration.class);
 		given(configuration.getResolvedConfiguration()).willReturn(resolvedConfiguration);
 		ResolvableDependencies resolvableDependencies = mock(ResolvableDependencies.class);
@@ -680,6 +707,15 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		}).given(resolvableDependencies).afterResolve(any(Action.class));
 		given(configuration.getIncoming()).willReturn(resolvableDependencies);
 		populateResolvedDependencies(configuration);
+	}
+
+	protected void createReachabilityProperties(File directory, String groupId, String artifactId, String version,
+			String override) throws IOException {
+		File targetDirectory = new File(directory,
+				"META-INF/native-image/%s/%s/%s".formatted(groupId, artifactId, version));
+		File target = new File(targetDirectory, "reachability-metadata.properties");
+		targetDirectory.mkdirs();
+		FileCopyUtils.copy("override=%s\n".formatted(override).getBytes(StandardCharsets.ISO_8859_1), target);
 	}
 
 	abstract void populateResolvedDependencies(Configuration configuration);
@@ -719,7 +755,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	List<String> entryLines(JarFile jarFile, String entryName) throws IOException {
 		try (BufferedReader reader = new BufferedReader(
 				new InputStreamReader(jarFile.getInputStream(jarFile.getEntry(entryName))))) {
-			return reader.lines().collect(Collectors.toList());
+			return reader.lines().toList();
 		}
 	}
 
