@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -44,6 +43,8 @@ import org.apache.maven.shared.invoker.InvocationRequest;
 import org.apache.maven.shared.invoker.InvocationResult;
 import org.apache.maven.shared.invoker.Invoker;
 import org.apache.maven.shared.invoker.MavenInvocationException;
+
+import org.springframework.util.FileSystemUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.contentOf;
@@ -87,23 +88,11 @@ class MavenBuild {
 
 	private Map<String, String> getPomReplacements() {
 		Map<String, String> replacements = new HashMap<>();
-		SpringBootDependenciesBom bom = new SpringBootDependenciesBom();
 		replacements.put("java.version", "1.8");
 		replacements.put("project.groupId", "org.springframework.boot");
 		replacements.put("project.artifactId", "spring-boot-maven-plugin");
-		replacements.put("project.version", bom.get("version"));
-		putReplacement(replacements, bom, "log4j2.version");
-		putReplacement(replacements, bom, "maven-jar-plugin.version");
-		putReplacement(replacements, bom, "maven-war-plugin.version");
-		putReplacement(replacements, bom, "build-helper-maven-plugin.version");
-		putReplacement(replacements, bom, "spring-framework.version");
-		putReplacement(replacements, bom, "jakarta-servlet.version");
-		putReplacement(replacements, bom, "kotlin.version");
+		replacements.putAll(new Versions().asMap());
 		return Collections.unmodifiableMap(replacements);
-	}
-
-	private void putReplacement(Map<String, String> replacements, SpringBootDependenciesBom bom, String property) {
-		replacements.put(property, bom.get("properties/" + property));
 	}
 
 	MavenBuild project(String project) {
@@ -152,12 +141,12 @@ class MavenBuild {
 				@Override
 				public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
 					if (file.toFile().getName().equals("pom.xml")) {
-						String pomXml = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+						String pomXml = Files.readString(file);
 						for (Entry<String, String> replacement : MavenBuild.this.pomReplacements.entrySet()) {
 							pomXml = pomXml.replace("@" + replacement.getKey() + "@", replacement.getValue());
 						}
-						Files.write(destination.resolve(source.relativize(file)),
-								pomXml.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE_NEW);
+						Files.writeString(destination.resolve(source.relativize(file)), pomXml,
+								StandardOpenOption.CREATE_NEW);
 					}
 					else {
 						Files.copy(file, destination.resolve(source.relativize(file)),
@@ -167,14 +156,11 @@ class MavenBuild {
 				}
 
 			});
-			String settingsXml = new String(Files.readAllBytes(Paths.get("src", "intTest", "projects", "settings.xml")),
-					StandardCharsets.UTF_8)
-							.replace("@localCentralUrl@",
-									new File("build/int-test-maven-repository").toURI().toURL().toString())
-							.replace("@localRepositoryPath@",
-									new File("build/local-maven-repository").getAbsolutePath());
-			Files.write(destination.resolve("settings.xml"), settingsXml.getBytes(StandardCharsets.UTF_8),
-					StandardOpenOption.CREATE_NEW);
+			String settingsXml = Files.readString(Paths.get("src", "intTest", "projects", "settings.xml"))
+					.replace("@localCentralUrl@",
+							new File("build/int-test-maven-repository").toURI().toURL().toString())
+					.replace("@localRepositoryPath@", new File("build/local-maven-repository").getAbsolutePath());
+			Files.writeString(destination.resolve("settings.xml"), settingsXml, StandardOpenOption.CREATE_NEW);
 			request.setBaseDirectory(this.temp);
 			request.setJavaHome(new File(System.getProperty("java.home")));
 			request.setProperties(this.properties);
@@ -206,6 +192,9 @@ class MavenBuild {
 		}
 		catch (Exception ex) {
 			throw new RuntimeException(ex);
+		}
+		finally {
+			FileSystemUtils.deleteRecursively(this.temp);
 		}
 	}
 
