@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.boot.maven;
 
 import java.io.File;
-import java.lang.reflect.Method;
 
 import org.junit.jupiter.api.TestTemplate;
 import org.junit.jupiter.api.condition.DisabledOnOs;
@@ -38,24 +37,9 @@ class RunIntegrationTests {
 	@TestTemplate
 	void whenTheRunGoalIsExecutedTheApplicationIsForkedWithOptimizedJvmArguments(MavenBuild mavenBuild) {
 		mavenBuild.project("run").goals("spring-boot:run", "-X").execute((project) -> {
-			String jvmArguments = isJava13OrLater() ? "JVM argument(s): -XX:TieredStopAtLevel=1"
-					: "JVM argument(s): -Xverify:none -XX:TieredStopAtLevel=1";
+			String jvmArguments = "JVM argument(s): -XX:TieredStopAtLevel=1";
 			assertThat(buildLog(project)).contains("I haz been run").contains(jvmArguments);
 		});
-	}
-
-	@TestTemplate
-	void whenForkingIsDisabledAndDevToolsIsPresentDevToolsIsDisabled(MavenBuild mavenBuild) {
-		mavenBuild.project("run-devtools").goals("spring-boot:run").execute((project) -> assertThat(buildLog(project))
-				.contains("I haz been run").contains("Fork mode disabled, devtools will be disabled"));
-	}
-
-	@TestTemplate
-	void whenForkingIsDisabledJvmArgumentsAndWorkingDirectoryAreIgnored(MavenBuild mavenBuild) {
-		mavenBuild.project("run-disable-fork").goals("spring-boot:run")
-				.execute((project) -> assertThat(buildLog(project)).contains("I haz been run").contains(
-						"Fork mode disabled, ignoring JVM argument(s) [-Dproperty1=value1 -Dproperty2 -Dfoo=bar]")
-						.contains("Fork mode disabled, ignoring working directory configuration"));
 	}
 
 	@TestTemplate
@@ -99,12 +83,6 @@ class RunIntegrationTests {
 	@TestTemplate
 	void whenProfilesAreConfiguredTheyArePassedToTheApplication(MavenBuild mavenBuild) {
 		mavenBuild.project("run-profiles").goals("spring-boot:run", "-X").execute(
-				(project) -> assertThat(buildLog(project)).contains("I haz been run with profile(s) 'foo,bar'"));
-	}
-
-	@TestTemplate
-	void whenProfilesAreConfiguredAndForkingIsDisabledTheyArePassedToTheApplication(MavenBuild mavenBuild) {
-		mavenBuild.project("run-profiles-fork-disabled").goals("spring-boot:run").execute(
 				(project) -> assertThat(buildLog(project)).contains("I haz been run with profile(s) 'foo,bar'"));
 	}
 
@@ -154,15 +132,6 @@ class RunIntegrationTests {
 
 	private String buildLog(File project) {
 		return contentOf(new File(project, "target/build.log"));
-	}
-
-	private boolean isJava13OrLater() {
-		for (Method method : String.class.getMethods()) {
-			if (method.getName().equals("stripIndent")) {
-				return true;
-			}
-		}
-		return false;
 	}
 
 }
